# SPDX-FileCopyrightText: 2025 Contributors to the OpenSTEF project <openstef@lfenergy.org>
#
# SPDX-License-Identifier: MPL-2.0

[project]
name = "openstef-docs"
version = "0.0.0"
description = "Open Short Term Energy forecasting library"
readme = "README.md"
keywords = [ "energy", "forecasting", "machinelearning" ]
license = "MPL-2.0"
authors = [
  { name = "Alliander N.V", email = "openstef@lfenergy.org" },
]
requires-python = ">=3.12,<4.0"
dependencies = [
  "sphinx-pyproject>=0.3.0",
  "ipython>=9.4.0",
  "kaleido>=1.0.0",
  "matplotlib>=3.10.5",
  "optuna>=4.7",
  "huggingface-hub>=1.2.2",
  "openstef-models",
  "openstef-core",
  "pydata-sphinx-theme>=0.16.1",
  "sphinx>=8.2.3",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinx-gallery>=0.19.0",
  "sphinx-prompt>=1.10.0",
  "openstef-beam",
  "openstef",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-autodoc-typehints>=3.2.0",
  "myst-nb>=1.2.0",
  "jupyter-cache>=1.0.0",
  "jupytext>=1.16.0",
  "sphinxcontrib-mermaid>=0.9.2",
]

[tool.uv.sources]
openstef-beam = { workspace = true }
openstef-models = { workspace = true }
openstef = { workspace = true }
openstef-core = { workspace = true }

[tool.setuptools]
packages = []
