# SPDX-FileCopyrightText: 2025 Contributors to the OpenSTEF project <openstef@lfenergy.org>
#
# SPDX-License-Identifier: MPL-2.0

[project]
name = "openstef-examples"
version = "0.0.0"
description = "Examples and tutorials for OpenSTEF"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "openstef",
  "openstef-beam",
  "openstef-core",
  "openstef-models",
]

optional-dependencies.tutorials = [
  "jupyter>=1.1.1",
  # Constrained to v0.2.x; kaleido >=1.0 cannot serialize pandas Timestamp
  # via orjson, 0.4.x breaks the plotly scope API, and 0.2.1.post1 ships only
  # a linux/armv7 wheel. See OpenSTEF/openstef#938.
  "kaleido>=0.2.1,<0.3,!=0.2.1.post1",
  "openstef-core[benchmark]",
]

[tool.uv.sources]
openstef = { workspace = true }
openstef-beam = { workspace = true }
openstef-core = { workspace = true }
openstef-models = { workspace = true }
