[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.2.2",
    "jupyter>=1.1.1",
    "openstef==4.0.0a7",
    "scikit-learn==1.7.2",
    "xgboost==3.1.1",
]

[tool.uv.sources]
openstef = { path = "../.." }